# tcathome

./: CMakeLists.txt
assets/: sources.txt
cmake/: tinycc.cmake  wall.cmake
game/: engine.h  game.c
src/: core.cpp  core.hpp  engine.cpp  engine.hpp  fswatcher.cpp  fswatcher.hpp  gamecode.cpp  gamecode.hpp  gui.cpp  main.cpp  memtrack.cpp  memtrack.hpp  random.cpp  random.hpp  state_inspector.cpp  vm.cpp  vm.hpp
